# src/apis/controller/post/route.go
@@ -4,6 +4,7 @@ import (
 	"fist-app/src/shared/auth"
 	httpContext "fist-app/src/shared/http-context"
 	"fist-app/src/shared/jwt"
+	"fist-app/src/shared/utils"
 
 	"github.com/gin-gonic/gin"
 )
@@ -22,5 +23,26 @@ func (postController *PostController) InitRoute(
 		"",
 		httpContext.CustomContextHandler(auth.TokenAuthMiddleware(jwtAccessTokenManager)),
 		httpContext.CustomContextHandler(postController.GetPostsByUser),
+	)
+
+	routes.GET(
+		":id",
+		httpContext.CustomContextHandler(auth.TokenAuthMiddleware(jwtAccessTokenManager)),
+		httpContext.CustomContextHandler(utils.UUIDParamsMiddleware()),
+		httpContext.CustomContextHandler(postController.GetPostById),
+	)
+
+	routes.PATCH(
+		":id",
+		httpContext.CustomContextHandler(auth.TokenAuthMiddleware(jwtAccessTokenManager)),
+		httpContext.CustomContextHandler(utils.UUIDParamsMiddleware()),
+		httpContext.CustomContextHandler(postController.UpdatePost),
+	)
+
+	routes.DELETE(
+		":id",
+		httpContext.CustomContextHandler(auth.TokenAuthMiddleware(jwtAccessTokenManager)),
+		httpContext.CustomContextHandler(utils.UUIDParamsMiddleware()),
+		httpContext.CustomContextHandler(postController.DeletePost),
 	)
 }
