# src/apis/dto/post/update-post-req.go
@@ -1,0 +1,6 @@
+package post
+
+type UpdatePostReqDto struct {
+	Title       string `json:"title" binding:"required"`
+	Description string `json:"description" binding:"required,min=8"`
+}
